# apps/api/src/dto/slot/get-available-slots.dto.ts
@@ -3,9 +3,5 @@ import { IsISO8601, IsNotEmpty } from 'class-validator';
 export class GetAvailableSlotsDto {
   @IsISO8601()
   @IsNotEmpty()
-  startDate!: string;
-
-  @IsISO8601()
-  @IsNotEmpty()
-  endDate!: string;
+  forDate!: string;
 }
